# bootcamp-py-aula-18

./: README.md  controller.py  exemplo_00.py  pyproject.toml
src/: main.py  model.py  pokemon.db  schema.py
