[tool.poetry]
name = "bootcamp-py-aula-18"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.0"
isort = "^5.13.2"
taskipy = "^1.12.2"
requests = "^2.31.0"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort && black"
